Search items overlaps each other fixed. 'See all results' link fixed

--- a/src/app/component/layout/components/search-popup/search-item/search-item.component.scss
+++ b/src/app/component/layout/components/search-popup/search-item/search-item.component.scss
@@ -71,8 +71,6 @@
 
 @media only screen and (max-width: 1366px) {
   #list-gallery-content {
-    max-width: 33rem;
-    height: 190px;
     padding-right: 20px;
   }
 
