--- a/src/app/component/layout/components/search-popup/search-popup.component.scss
+++ b/src/app/component/layout/components/search-popup/search-popup.component.scss
@@ -305,7 +305,7 @@
     .all-results-link {
       display: block;
       left: 0px;
-      margin-top: 30px;
+      margin-top: 60px;
       text-decoration-line: underline;
       color: #056B33;
       font-family: OpenSans, sans-serif;
@@ -465,7 +465,7 @@
     .all-results-link {
       display: block;
       left: 0px;
-      margin-top: 30px;
+      margin-top: 110px;
       text-decoration-line: underline;
       color: #056B33;
       font-family: OpenSans, sans-serif;
